--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "proxy:dev": "SECRET=secret ts-node-dev proxy/main.ts",
     "daemon:dev": "ACCESS_TOKEN=eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJqdGkiOiI3MmE0MDYwZS04MWFkLTRkYmYtOTc3YS1iODY4NzNiMTI5YjIiLCJpYXQiOjE1NjU4MDI2NjMsImV4cCI6MTU2NTgwNjI2M30.MHyv74wch83lGX4t15ZAReSX2Ubc3oJkAJfffutndBE ts-node-dev local-daemon/main.ts",
     "proxy": "ts-node proxy/main.ts",
-    "daemon": "ts-node proxy/main.ts"
+    "daemon": "ts-node local-daemon/main.ts"
   },
   "repository": {
     "type": "git",
